Update countdown for New Year 2026

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year's Countdown</title>
+    <title>New Year 2026 Countdown</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -36,7 +36,7 @@
             0% { transform: scale(1); }
             100% { transform: scale(1.05); }
         }
-        .final-message {
+        .custom-message {
             font-size: 2em;
             margin-top: 30px;
             color: #ffd700;
@@ -54,20 +54,20 @@
     </style>
 </head>
 <body>
-    <h1>Happy New Year Countdown!</h1>
+    <h1>Countdown to New Year 2026 in Hours!</h1>
     <div class="countdown">
-        <div class="count-item">10... As the clock ticks down, here's to new beginnings and endless possibilities!</div>
-        <div class="count-item">9... May your year be filled with laughter, love, and unforgettable adventures.</div>
-        <div class="count-item">8... Cheers to leaving the old behind and embracing fresh starts.</div>
-        <div class="count-item">7... Wishing you health, happiness, and prosperity in the year ahead.</div>
-        <div class="count-item">6... Let's count down to a brighter tomorrow together!</div>
-        <div class="count-item">5... Dreams to chase, goals to achieve, and memories to make.</div>
-        <div class="count-item">4... Gratitude for the past, excitement for the future.</div>
-        <div class="count-item">3... One step closer to ringing in the new!</div>
-        <div class="count-item">2... Get ready for fireworks, fun, and fabulous times.</div>
-        <div class="count-item">1... Happy New Year! 🎉 Here's to you and all the magic 2024 brings! 🥂</div>
+        <div class="count-item">10 hours... Get ready for fresh starts and new adventures in 2026!</div>
+        <div class="count-item">9 hours... May your year ahead be filled with joy and success.</div>
+        <div class="count-item">8 hours... Cheers to leaving 2025 behind and embracing the future.</div>
+        <div class="count-item">7 hours... Wishing you health, happiness, and prosperity in 2026.</div>
+        <div class="count-item">6 hours... Let's count down to a brighter tomorrow together!</div>
+        <div class="count-item">5 hours... Dreams to chase, goals to achieve, and memories to make.</div>
+        <div class="count-item">4 hours... Gratitude for the past, excitement for the future.</div>
+        <div class="count-item">3 hours... One step closer to ringing in 2026!</div>
+        <div class="count-item">2 hours... Get ready for fireworks, fun, and fabulous times.</div>
+        <div class="count-item">1 hour... Happy New Year 2026! 🎉 Here's to you and all the magic it brings! 🥂</div>
     </div>
-    <div class="final-message">Wishing you a year full of joy and success!</div>
-    <footer>* Customize this for your own celebrations!</footer>
+    <div class="custom-message">May 2026 bring you endless opportunities, love, and laughter. Cheers to a fantastic year ahead!</div>
+    <footer>* This is a static countdown. For a real-time timer, add JavaScript!</footer>
 </body>
 </html>
